# FONDAMENTI-DI-VISIONE-ARTIFICIALE

./: README.md
opencv-lab-l01/: CMakeLists.txt  README.md
opencv-lab-l01/include/: args.hpp  io.hpp  ops.hpp
opencv-lab-l01/src/: io.cpp  main.cpp  ops.cpp
opencv-lab-l02/: CMakeLists.txt  README.md  convolution.cpp
opencv-lab-l02/include/: myfilter2D.hpp  utils.hpp
opencv-lab-l02/src/: main.cpp  myfilter2D.cpp  utils.cpp
opencv-lab-l03/: CMakeLists.txt  README.md
opencv-lab-l03/include/: args.hpp  background.hpp  io.hpp
opencv-lab-l03/src/: background.cpp  io.cpp  main.cpp
opencv-lab-l04/: CMakeLists.txt  README.md  exprunning.cpp
opencv-lab-l05/L05-edges/: CMakeLists.txt  README.md
opencv-lab-l05/L05-edges/include/: args.hpp  convolution.hpp  filters.hpp  utils.hpp
opencv-lab-l05/L05-edges/src/: args.cpp  convolution.cpp  filters.cpp  main.cpp  utils.cpp
opencv-lab-l05/L05-inverse/: CMakeLists.txt  README.md
opencv-lab-l05/L05-inverse/data/: CMakeCache.txt  Makefile  cmake_install.cmake  gas_params.txt  ice_params.txt  numbers_params.txt  test_params.txt
opencv-lab-l05/L05-inverse/include/: utils.h
opencv-lab-l05/L05-inverse/src/: main.cpp
opencv-lab-l07/: CMakeLists.txt  README.md  simple.cpp
opencv-lab-l08/: CMakeLists.txt  README.md
opencv-lab-l08/src/: fitting.cpp
opencv-visione_homework/: 7spicchi.pgm  9spicchi.pgm  README.md  simple.cpp  vision.cpp  vision1.cpp
